--- a/iClassWeb/templates/classroom/list_classroom.html
+++ b/iClassWeb/templates/classroom/list_classroom.html
@@ -7,14 +7,14 @@
 <br>
 <div class="row">
 {% for classroom in object_list %}
-    
-        <div class="col-4" style="background-color: e6f1f4">
-            <p>Course: {{ classroom.course }}</p>
-            <p>Room No: {{ classroom.room_no }}</p>
-            <a href="{% url 'classroom:classroom_detail' classroom.code classroom.id %}">
-                <button class="btn btn-primary">Details</button>
-            </a>
-            <br><br><br><br><br>
+        <div class="col-sm-5">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Course: {{ classroom.course }}</h5>
+                    <p class="card-text">Room No: {{ classroom.room_no }}</p>
+                    <a href="{% url 'classroom:classroom_detail' classroom.code classroom.id %}" class="btn btn-primary">Details</a>
+                </div>
+            </div>
         </div>
 {% empty %}
     <p>No classrooms undertaken by you yet.</p>
